--- a/locales/ru.json
+++ b/locales/ru.json
@@ -109,6 +109,9 @@
     "gender_selected": "<b>Пожалуйста, введите ваш возраст:</b>",
     "invalid_age": "Пожалуйста, введите действительный возраст (например, 18, 25). ⚠️"
   },
+  "contact_recruiter_message": "Когда вам будет удобно, чтобы наш рекрутер связался с вами?",
+  "invalid_phone_number": "Введённый вами номер телефона недействителен. Пожалуйста, введите действительный номер телефона.",
   "yes": "Да ✅",
-  "no": "Нет ❌"
+  "no": "Нет ❌",
+  "invalid_yes_or_no": "Неверный ответ. Выберите 'Да' или 'Нет'."
 }
