--- a/locales/ua.json
+++ b/locales/ua.json
@@ -81,7 +81,7 @@
     "please_choose": "<b>Будь ласка, виберіть, як ви хочете шукати роботу:</b> 🤔",
     "choose_by_city": "Вибрати за містом/містами 🌆",
     "choose_by_job": "Вибрати за умовами роботи 📄",
-    "choose_by_gender_age": "Вибрати за статтю та віком 🚻",
+    "choose_by_gender_age": "Вибрати за статею та віком 🚻",
     "invalid_option": "❌ <b>Неправильний варіант.</b> Будь ласка, виберіть один з наданих варіантів.",
     "city_selection": "<b>Ви вибрали вибір за містом.</b> Будь ласка, введіть назву міста:",
     "add_another_city": "<b>Хочете додати ще одне місто до пошуку?</b> 🌍",
@@ -95,8 +95,28 @@
     "message_confirmed": "✅ <b>Ваша заявка підтверджена.</b>",
     "another_query": "💬 <b>Хочете задати інше питання?</b>",
     "yes": "Так ✅",
-    "no": "Ні ❌"
+    "no": "Ні ❌",
+    "select_shift": "<b>Будь ласка, виберіть зміну:</b> 🌙",
+    "shift_options": {
+      "day_night": "Денна/Нічна 🌞🌙",
+      "day": "Денна 🌞",
+      "night": "Нічна 🌙",
+      "evening": "Вечірня 🌆",
+      "any": "Будь який графік 🔄"
+    },
+    "select_gender": "<b>Будь ласка, оберіть вашу стать:</b> 🚻",
+    "gender_options": {
+      "male": "Чоловік 👨",
+      "female": "Жінка 👩",
+      "couple": "Пара 👩‍❤️‍👨"
+    },
+    "gender_selected": "<b>Будь ласка, введіть ваш вік:</b>",
+    "invalid_age": "Будь ласка, введіть дійсний вік (наприклад, 18, 25). ⚠️",
+    "no_vacancies": "❌ <b>Немає вакансій, що відповідають вашим критеріям.</b>"
   },
+  "contact_recruiter_message": "Коли вам буде зручно, щоб наш рекрутер зконтактувався з вами?",
+  "invalid_phone_number": "Введений вами номер телефону недійсний. Будь ласка, введіть дійсний номер телефону.",
   "yes": "Так ✅",
-  "no": "Ні ❌"
+  "no": "Ні ❌",
+  "invalid_yes_or_no": "Неправильна відповідь. Оберіть 'Так' або 'Ні'."
 }
