--- a/locales/en.json
+++ b/locales/en.json
@@ -20,7 +20,7 @@
     "share_contact": "Share my contact 🤝",
     "enter_phone": "Enter phone number ✍️",
     "age": "<b>How old are you?</b> 🎂",
-    "citizenship": "<b>What is your citizenship?</b> Choose or enter manually 🌍",
+    "citizenship": "<b>What is your citizenship?</b> \n CHOOSE OR ENTER MANUALLY 🌍",
     "document": "<b>Document that confirms the legality of your stay in Poland:</b>",
     "only_myself": "Only me 🧍‍♂️",
     "not_only_myself": "Not only me 👨‍👩‍👧‍👦",
