--- a/locales/ru.json
+++ b/locales/ru.json
@@ -21,7 +21,7 @@
     "share_contact": "Поделиться моим контактом 🤝",
     "enter_phone": "Ввести номер телефона ✍️",
     "age": "<b>Сколько вам лет?</b> 🎂",
-    "citizenship": "<b>Какое у вас гражданство?</b> Выберите или введите вручную 🌍",
+    "citizenship": "<b>Какое у вас гражданство?</b> \n ВЫБЕРИТЕ ИЛИ ВВЕДИТЕ ВРУЧНУЮ 🌍",
     "document": "<b>Документ, подтверждающий законность вашего пребывания в Польше:</b>",
     "only_myself": "Только я 🧍‍♂️",
     "not_only_myself": "Не только я 👨‍👩‍👧‍👦",
