--- a/locales/ua.json
+++ b/locales/ua.json
@@ -21,7 +21,7 @@
     "share_contact": "Поділитися моїм контактом 🤝",
     "enter_phone": "Ввести номер телефону ✍️",
     "age": "<b>Скільки вам років?</b> 🎂",
-    "citizenship": "<b>Яке у вас громадянство?</b> Виберіть або введіть вручну 🌍",
+    "citizenship": "<b>Яке у вас громадянство?</b> \n ВИБЕРІТЬ АБО ВВЕДІТЬ ВРУЧНУ 🌍",
     "document": "<b>Документ, що підтверджує законність вашого перебування в Польщі:</b>",
     "only_myself": "Тільки я 🧍‍♂️",
     "not_only_myself": "Не тільки я 👨‍👩‍👧‍👦",
