--- a/locales/ru.json
+++ b/locales/ru.json
@@ -76,8 +76,8 @@
     "application_received": "🙏 <b>Ваша заявка получена.</b> Спасибо!"
   },
   "job_selection": {
-    "ask_for_ages": "<b>Пожалуйста, введите возраст партнера-мужчины:</b>",
-    "ask_for_next_age": "<b>Пожалуйста, введите возраст партнера-женщины:</b>",
+    "ask_for_ages": "<b>Пожалуйста, введите свой возраст:</b>",
+    "ask_for_next_age": "<b>Пожалуйста, введите возраст вашего партнера:</b>",
     "please_choose": "<b>Пожалуйста, выберите, как вы хотите искать работу:</b> 🤔",
     "choose_by_city": "Выбрать по городу/городам 🌆",
     "choose_by_job": "Выбрать по условиям работы 📄",
