--- a/locales/ua.json
+++ b/locales/ua.json
@@ -76,8 +76,8 @@
     "application_received": "🙏 <b>Ваша заявка була отримана.</b> Дякуємо!"
   },
   "job_selection": {
-    "ask_for_ages": "<b>Будь ласка, введіть вік чоловічого партнера:</b>",
-    "ask_for_next_age": "<b>Будь ласка, введіть вік жіночого партнера:</b>",
+    "ask_for_ages": "<b>Будь ласка, введіть ваш вік:</b>",
+    "ask_for_next_age": "<b>Будь ласка, введіть вік вашого партнера:</b>",
     "please_choose": "<b>Будь ласка, виберіть, як ви хочете шукати роботу:</b> 🤔",
     "choose_by_city": "Вибрати за містом/містами 🌆",
     "choose_by_job": "Вибрати за умовами роботи 📄",
