--- a/locales/en.json
+++ b/locales/en.json
@@ -75,8 +75,8 @@
     "application_received": "🙏 <b>Your application has been received.</b> Thank you!"
   },
   "job_selection": {
-    "ask_for_ages": "<b>Please enter the age of the male partner:</b>",
-    "ask_for_next_age": "<b>Please enter the age of the female partner:</b>",
+    "ask_for_ages": "<b>Please enter your age:</b>",
+    "ask_for_next_age": "<b>Please enter the age of your partner:</b>",
     "please_choose": "<b>Please choose how you would like to search for jobs:</b> 🤔",
     "choose_by_city": "Choose by City/Cities 🌆",
     "choose_by_job": "Choose by job conditions 📄",
