--- a/locales/ru.json
+++ b/locales/ru.json
@@ -11,6 +11,7 @@
     "contact_recruiter": "📞 Связаться с рекрутером",
     "submit_application": "✍️ Оставить заявку на подбор работы",
     "change_language": "🌐 Изменить язык",
+    "subscribe": "📧 Подписаться на уведомления о вакансиях",
     "prompt": "<b>👋 Добро пожаловать в главное меню!</b> Пожалуйста, выберите, что вам нужно:"
   },
   "available_commands": "<b>Доступные команды:</b>\n\n• <code>/start</code> - Начать разговор и получить приветственное сообщение.\n• <code>/change_language</code> - Изменить предпочитаемый язык.\n• <code>/restart</code> - Перезапустить разговор с самого начала.\n• <code>/help</code> - Показать все доступные команды.\n• <code>/view_all_job_listings</code> - Просмотреть все актуальные вакансии.\n• <code>/select_job</code> - Найти работу по предпочтительным параметрам.\n• <code>/submit_application</code> - Подать заявку на поиск вакансии.\n• <code>/contact_recruiter</code> - Выбрать время и связаться с рекрутером, когда это необходимо.",
@@ -108,6 +109,17 @@
     },
     "gender_selected": "<b>Пожалуйста, введите ваш возраст:</b>",
     "invalid_age": "Пожалуйста, введите действительный возраст (например, 18, 25). ⚠️"
+  },
+  "subscribe": {
+    "enter_age": "Пожалуйста, введите ваш возраст:",
+    "select_gender": "Пожалуйста, выберите ваш пол:",
+    "male": "Мужской",
+    "female": "Женский",
+    "other": "Другой",
+    "enter_rate": "Пожалуйста, введите желаемую ставку (почасовая или месячная):",
+    "enter_city": "Пожалуйста, введите ваш город:",
+    "confirmation": "Вы подписались с следующими параметрами:\n- Возраст: {{age}}\n- Пол: {{gender}}\n- Ставка: {{rate}}\n- Город: {{city}}",
+    "select_gender_error": "Пожалуйста, используйте кнопки для выбора пола."
   },
   "contact_recruiter_message": "Когда вам будет удобно, чтобы наш рекрутер связался с вами?",
   "invalid_phone_number": "Введённый вами номер телефона недействителен. Пожалуйста, введите действительный номер телефона.",
