--- a/locales/ua.json
+++ b/locales/ua.json
@@ -11,6 +11,7 @@
     "contact_recruiter": "📞 Зв'язатися з рекрутером",
     "submit_application": "✍️ Подати заявку на роботу",
     "change_language": "🌐 Змінити мову",
+    "subscribe": "📧 Підписатися на сповіщення про вакансії",
     "prompt": "<b>👋 Ласкаво просимо до головного меню!</b> Будь ласка, виберіть опцію:"
   },
   "available_commands": "<b>Доступні команди:</b>\n\n• <code>/start</code> - Розпочати бесіду та отримати привітальне повідомлення.\n• <code>/change_language</code> - Змінити обрану мову.\n• <code>/restart</code> - Перезапустити розмову з початку.\n• <code>/help</code> - Показати всі доступні команди.\n• <code>/view_all_job_listings</code> - Переглянути всі актуальні вакансії.\n• <code>/select_job</code> - Знайти роботу за обраними параметрами.\n• <code>/submit_application</code> - Подати заявку на пошук вакансії.\n• <code>/contact_recruiter</code> - Обрати час та зв'язатися з рекрутером, коли це потрібно.",
@@ -113,6 +114,17 @@
     "gender_selected": "<b>Будь ласка, введіть ваш вік:</b>",
     "invalid_age": "Будь ласка, введіть дійсний вік (наприклад, 18, 25). ⚠️",
     "no_vacancies": "❌ <b>Немає вакансій, що відповідають вашим критеріям.</b>"
+  },
+  "subscribe": {
+    "enter_age": "Будь ласка, введіть ваш вік:",
+    "select_gender": "Будь ласка, оберіть вашу стать:",
+    "male": "Чоловік",
+    "female": "Жінка",
+    "other": "Інший",
+    "enter_rate": "Будь ласка, введіть бажану ставку (погодинна або місячна):",
+    "enter_city": "Будь ласка, введіть ваше місто:",
+    "confirmation": "Ви підписалися з наступними параметрами:\n- Вік: {{age}}\n- Стать: {{gender}}\n- Ставка: {{rate}}\n- Місто: {{city}}",
+    "select_gender_error": "Будь ласка, скористайтеся кнопками для вибору статі."
   },
   "contact_recruiter_message": "Коли вам буде зручно, щоб наш рекрутер зконтактувався з вами?",
   "invalid_phone_number": "Введений вами номер телефону недійсний. Будь ласка, введіть дійсний номер телефону.",
