--- a/locales/ru.json
+++ b/locales/ru.json
@@ -125,5 +125,6 @@
   "invalid_phone_number": "Введённый вами номер телефона недействителен. Пожалуйста, введите действительный номер телефона.",
   "yes": "Да ✅",
   "no": "Нет ❌",
-  "invalid_yes_or_no": "Неверный ответ. Выберите 'Да' или 'Нет'."
+  "invalid_yes_or_no": "Неверный ответ. Выберите 'Да' или 'Нет'.",
+  "recruiter_will_contact_soon": "Наш рекрутер скоро свяжется с вами!"
 }
