--- a/locales/ua.json
+++ b/locales/ua.json
@@ -130,5 +130,6 @@
   "invalid_phone_number": "Введений вами номер телефону недійсний. Будь ласка, введіть дійсний номер телефону.",
   "yes": "Так ✅",
   "no": "Ні ❌",
-  "invalid_yes_or_no": "Неправильна відповідь. Оберіть 'Так' або 'Ні'."
+  "invalid_yes_or_no": "Неправильна відповідь. Оберіть 'Так' або 'Ні'.",
+  "recruiter_will_contact_soon": "Наш рекрутер скоро зв'яжеться з вами!"
 }
