--- a/locales/ru.json
+++ b/locales/ru.json
@@ -115,11 +115,12 @@
     "select_gender": "Пожалуйста, выберите ваш пол:",
     "male": "Мужской",
     "female": "Женский",
-    "other": "Другой",
+    "other": "Пары",
     "enter_rate": "Пожалуйста, введите желаемую ставку (почасовая или месячная):",
     "enter_city": "Пожалуйста, введите ваш город:",
-    "confirmation": "Вы подписались с следующими параметрами:\n- Возраст: {{age}}\n- Пол: {{gender}}\n- Ставка: {{rate}}\n- Город: {{city}}",
-    "select_gender_error": "Пожалуйста, используйте кнопки для выбора пола."
+    "confirmation": "Вы подписались! Мы будем вас информировать о новых вакансиях, подходящих к вашим параметрам!",
+    "select_gender_error": "Пожалуйста, используйте кнопки для выбора пола.",
+    "enter_rate_invalid": "Пожалуйста, введите корректную ставку. Это должно быть положительное число."
   },
   "contact_recruiter_message": "Когда вам будет удобно, чтобы наш рекрутер связался с вами?",
   "invalid_phone_number": "Введённый вами номер телефона недействителен. Пожалуйста, введите действительный номер телефона.",
