--- a/locales/ua.json
+++ b/locales/ua.json
@@ -120,11 +120,12 @@
     "select_gender": "Будь ласка, оберіть вашу стать:",
     "male": "Чоловік",
     "female": "Жінка",
-    "other": "Інший",
+    "other": "Пари",
     "enter_rate": "Будь ласка, введіть бажану ставку (погодинна або місячна):",
     "enter_city": "Будь ласка, введіть ваше місто:",
-    "confirmation": "Ви підписалися з наступними параметрами:\n- Вік: {{age}}\n- Стать: {{gender}}\n- Ставка: {{rate}}\n- Місто: {{city}}",
-    "select_gender_error": "Будь ласка, скористайтеся кнопками для вибору статі."
+    "confirmation": "Ви підписалися! Ми будемо повідомляти вас про нові вакансії, які підходять саме вам!",
+    "select_gender_error": "Будь ласка, скористайтеся кнопками для вибору статі.",
+    "enter_rate_invalid": "Будь ласка, введіть правильну ставку. Це повинно бути додатнє число."
   },
   "contact_recruiter_message": "Коли вам буде зручно, щоб наш рекрутер зконтактувався з вами?",
   "invalid_phone_number": "Введений вами номер телефону недійсний. Будь ласка, введіть дійсний номер телефону.",
