--- a/locales/ru.json
+++ b/locales/ru.json
@@ -48,7 +48,10 @@
     "no": "Нет ❌",
     "skip_questionnaire": "<b>Хотите пропустить анкету?</b> Вы уже отправили форму. 🤷‍♂️",
     "skip_success": "<b>Когда вы хотите встретиться с вашим рекрутером?</b> 📅",
-    "select_time": "<b>Пожалуйста, выберите время для начала обсуждения:</b>"
+    "select_time": "<b>Пожалуйста, выберите время для начала обсуждения:</b>",
+    "ask_preferred_date": "Пожалуйста, укажите предпочитаемую дату, чтобы мы могли с вами связаться: ",
+    "ask_preferred_time": "Пожалуйста, укажите предпочитаемое время, когда мы могли бы с вами связаться: "
+
   },
   "go_back": "🔙 Назад",
   "cancel": "❌ Отменить",
