--- a/locales/ua.json
+++ b/locales/ua.json
@@ -48,7 +48,10 @@
     "no": "Ні ❌",
     "skip_questionnaire": "<b>Ви хочете пропустити анкету?</b> Ви вже подали форму. 🤷‍♂️",
     "skip_success": "<b>Коли ви хочете зустрітися з вашим рекрутером?</b> 📅",
-    "select_time": "<b>Будь ласка, виберіть час для початку обговорення:</b>"
+    "select_time": "<b>Будь ласка, виберіть час для початку обговорення:</b>",
+    "ask_preferred_date": "Будь ласка, вкажіть бажану дату, щоб ми могли з вами зв'язатися: ",
+    "ask_preferred_time": "Будь ласка, вкажіть бажаний час, коли ми могли б з вами зв'язатися: "
+
   },
   "go_back": "🔙 Повернутися назад",
   "cancel": "❌ Скасувати",
